o Reworked options handling, and options/toggles display -Savil

v9.6
o Added a way to customize defense options with aliases (ldd, chd, sdd) -Savil
o Added an alias GMCPcheck to test if GMCP is enabled -Savil
o Updated ?help -Savil
o Updated the mg alias, to use the correct guards for each city -Savil
o Added a gripping toggle -Elanoron
o Added a swordmaster defense option -Elanoron
o Updated the rewield script -Elanoron
o Added triggers for whispers (outgoing hits) -Elanoron
o Defense skill checks -Naftali
o Fixed auto-closing -Elanoron
o Added blackout cure trigger -Elanoron

v9.6.1
o Reverted some breaking changes (defenses skill checks, and a debugging one)
o Fixed a few internal scripts to handle fighting
o Fixed a blackout trigger -Elanoron

v9.7
o Added psionics defenses -Rosalia
o Defense skill checks -Naftali
o the system now raises events to have an easier API -Naftali
o Added a zealous mandate toggle -Savil
o Prevents nasty illusions (death triggering a mtw.reset_all(), lines that fire two triggers, forcing one to get through) -Savil
o Reworked how options are saved (and they are now changed with ?variables and !variable X set Y instead of ?options and ?set option) -Savil
o Added a script to handle legacy saves -Savil
o Added a way to handle bashing areas with commands (?area) -Savil
o Lots of useful fixes (psionics triggers, recklessness check, commanded affliction, counter, loot/rage, suckerpunch) -Elanoron
o Inking a tattoo and deepshrouding now prevents the system from processing commands, as rifting does -Savil

v
o Made decapitate easier to notice -Savil
o Both aliases 'rift' and 'cast rift' can work -Savil
o Added a 'generic' area in which you can add mobs that you want to bash in every area (wyrms, pumpkins...) -Savil
o Updated bashing areas -Nemi
o Updated shadoweaver aliases -Aidan
o Added a tether summon alias 'teths' -Gianna
o Added a sunspear defense -Raelyr
o Added some functions to check inventory/vault/IH -Naftali