@@ -877,3 +877,4 @@ o Updated shadoweaver aliases -Aidan
 o Added a tether summon alias 'teths' -Gianna
 o Added a sunspear defense -Raelyr
 o Added some functions to check inventory/vault/IH -Naftali
+o Added a revitalizing toggle 'trv' for priest bashing -Savil
